src/tests/testfiles/function-declarations/2.txt
Error at 6:1: Redefinition of function
int f(int a, int b) {
^
